# Free_AI_World_Coin

./: .gitignore  .metadata  Cargo.toml  README.md  config.toml  directory_structure.txt  local.properties  pubspec.yaml  settings.gradle  structure.txt
FaicNode/: Cargo.toml
docs/: 20250103开发计划.md  FAIC.md  FAIC_API接口说明.md  FAIC_MVP01版本说明.md  FAIC_NPD网络协议说明.md  FAIC_PRD.md  FAIC_StandardsComplianceDocument采用的标准.md  FAIC_Types数据类型.md  FAIW_WhitePapper202412111657_CN.md  FunctionNameGuideline函数命名规则.md  NameGuideline命名规则.md  errorcode.md
faic_node/: Cargo.toml  structure.txt
faic_node/docs/: FAIC_Structure.md
faic_node/src/: lib.rs  main.rs
faic_node/src/api/: docs.rs  mod.rs  routes.rs
faic_node/src/api/handlers/: wallet.rs
faic_node/src/api/models/: mod.rs
faic_node/src/crypto/: ed25519.rs  mod.rs
faic_node/src/error/: mod.rs
faic_node/src/error/network/: error.rs  mod.rs
faic_node/src/error/wallet/: mod.rs
faic_node/src/network/: mod.rs
faic_node/src/network/p2p/: error.rs  faic_network.rs  interface.rs  mod.rs
faic_node/src/types/: amount.rs  mod.rs
faic_node/src/wallet/: core.rs  mod.rs  transaction.rs
faic_node/tests/: amount_test.rs  mod.rs  transaction_test.rs  wallet_test.rs
faic_node/tests/common/: mod.rs
faic_node/tests/performance/criterion/: node_bench.rs  wallet_bench.rs
faic_node/types/: amount.rs
faic_wallet/: CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
faic_wallet/android/app/: build.gradle
faic_wallet/android/app/src/main/: AndroidManifest.xml
faic_wallet/android/app/src/main/kotlin/com/example/faic_wallet/: MainActivity.kt
faic_wallet/ios/Runner/: Info.plist
faic_wallet/ios/Runner.xcodeproj/: project.pbxproj
faic_wallet/lib/: main.dart
faic_wallet/test/: widget_test.dart
lib/: main.dart
lib/constants/: app_constants.dart  theme.dart
lib/models/: token.dart  wallet.dart
lib/screens/: about_page.dart  create_wallet_screen.dart  home_page.dart  home_screen.dart  import_wallet_screen.dart  settings_page.dart  transaction_page.dart  wallet_page.dart  welcome_screen.dart
lib/screens/pages/: action_page.dart  actions_page.dart  receive_page.dart  send_page.dart  settings_page.dart  swap_page.dart  transaction_history_page.dart  wallet_page.dart
lib/services/: wallet_service.dart
lib/widgets/: action_buttons.dart  transaction_list.dart  wallet_card.dart
src/: main.rs
src/network/: config.rs  error.rs  mod.rs  protocol.rs  types.rs
src/types/: mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
