[package]
name = "faic_core"
version = "0.1.0"
edition = "2021"

[dependencies]
#types_amount
num-bigint = { version = "0.4.6", features = ["serde"] }
lazy_static = "1.5.0"

#network_config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
libp2p = "0.54.1"

#test

