[package]
name = "faic_node"
version = "0.1.0"
edition = "2021"
authors = ["FAIC Team"]
description = "FAIC Node Implementation"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 网络相关
libp2p = "0.54.1"
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
thiserror = "2.0.9"
anyhow = "1.0"

# 加密
sha2 = "0.10"
ed25519-dalek = "2.0"

# API
axum = "0.8.1"
tower = "0.5.2"
tower-http = "0.6.2"

[dev-dependencies]
tokio-test = "0.4"